created newsletter using HTML,CSS and boot strap

--- a/index.html
+++ b/index.html
@@ -22,38 +22,38 @@
             </div>
                 <br>
             <div class="desc">
-              <img src="C:\Users\cherl\Desktop\imagesnew\news1.png" alt="Trolltunga Norway" width="346" height="250"><br>
+              <img src="images\news1.png" alt="Trolltunga Norway" width="346" height="250"><br>
               <h4 style="padding:5px; color:rgb(128,128,128)"> LIVE UPDATES: Latest on Congressional baseball Shooting (reuters)</h4>
             </div>
 
             <div class="percent desc">
-              <img src="C:\Users\cherl\Desktop\imagesnew\news2.png" width="120px" height="95px" style="float:left; padding:5px"> 
+              <img src="images\news2.png" width="120px" height="95px" style="float:left; padding:5px"> 
               <h4 style="padding:5px; color:rgb(128,128,128)">Lawmakers Send Messages Of Support After Shotting</h4>
               <hr style="border:1px solid #ccc">
 
-              <img src="C:\Users\cherl\Desktop\imagesnew\news3.png" width="118px" height="95px" style="float:left; padding:5px"> 
+              <img src="images\news3.png" width="118px" height="95px" style="float:left; padding:5px"> 
               <h4 style="padding:10px; color:rgb(128,128,128)">Here's How<br> Congress Is <br>Protected<br></h4>
               <hr style="border:1px solid #ccc">
 
-              <img src="C:\Users\cherl\Desktop\imagesnew\news4.png" width="120px" height="95px" style="float:left; padding:5px"> 
+              <img src="images\news4.png" width="120px" height="95px" style="float:left; padding:5px"> 
               <h4 style="padding:5px; color:rgb(128,128,128)">Hiker Founds Cave Hidden In Dessert, But When He Looks... </h4>
             </div>
 
             <div class="percent desc">
-              <img src="C:\Users\cherl\Desktop\imagesnew\news5.png" width="120px" height="95px" style="float:left; padding:5px"> 
+              <img src="images\news5.png" width="120px" height="95px" style="float:left; padding:5px"> 
               <h4 style="padding:5px; color:rgb(128,128,128)">Grabrielle Giffords<br> Reacts to Congressional Shooting </h4>
               <hr style="border:1px solid #ccc">
 
-              <img src="C:\Users\cherl\Desktop\imagesnew\news6.png" width="120px" height="90px" style="float:left; padding:5px"> 
+              <img src="images\news6.png" width="120px" height="90px" style="float:left; padding:5px"> 
               <h4 style="padding:5px; color:rgb(128,128,128)"><br>I Was NOt I Could<br>to Not Get Killed:<br>Schene At Shooting</h4>
               <hr style="border:1px solid #ccc">
 
-              <img src="C:\Users\cherl\Desktop\imagesnew\news7.png" width="120px" height="90px" style="float:left; padding:5px"> 
+              <img src="images\news7.png" width="120px" height="90px" style="float:left; padding:5px"> 
               <h4 style="padding:5px; color:rgb(128,128,128)">Hiker Founds Cave Hidden In Dessert, But When He Looks... </h4>
             </div>
 
             <div class="percent desc">
-              <img src="C:\Users\cherl\Desktop\imagesnew\news8.png" width="339" height="250"><br>
+              <img src="images\news8.png" width="339" height="250"><br>
               <h4 style="padding:5px; color:rgb(128,128,128)"> Sessions Vows To Defend Himself Against 'false aligations'</h4>
             </div>
       </div>
