--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
             <div class="percent">
       		    <h1>News ></h1>
             </div><br>
-            <div calss="percent well">
-              <pre>US     WORLD     PLITICS     FACT     CHECK     OPINIUN     GOOGNEWS     CRIME     LOCAL     TECH     VEDEO     PHOTOS     MYTOPIC                                        Edit</pre>
+            <div style="margin-top:5px" calss="percent well">
+            <button type="button" class="btn btn-md">US</button>
+            <button type="button" class="btn btn-md">WORLD</button>
+            <button type="button" class="btn btn-md">POLITICS</button>
+            <button type="button" class="btn btn-md">FACT</button>
+            <button type="button" class="btn btn-md">CHECK</button>
+            <button type="button" class="btn btn-md">OPINUN</button>
+            <button type="button" class="btn btn-md">GOOGLE NEWS</button>
+            <button type="button" class="btn btn-md">CRIME</button>
+            <button type="button" class="btn btn-md">LOCAL</button>
+            <button type="button" class="btn btn-md">TECH</button>
+            <button type="button" class="btn btn-md">VIDEO</button>
+            <button type="button" class="btn btn-md">PHOTS</button>
+            <button style="float: right"type="button" class="btn btn-md">EDIT</button>
             </div>
-                <br>
+                <br><br>
             <div class="desc">
               <img src="images\news1.png" alt="Trolltunga Norway" width="346" height="250"><br>
               <h4 style="padding:5px; color:rgb(128,128,128)"> LIVE UPDATES: Latest on Congressional baseball Shooting (reuters)</h4>
