--- a/index.html
+++ b/index.html
@@ -14,25 +14,40 @@
     <body>
       <div class="box container-fluid well">
       		<hr style="height:2px;border:none;color:#333;background-color:#333;">
-            <div class="percent">
-      		    <h1>News ></h1>
-            </div><br>
-            <div style="margin-top:5px" calss="percent well">
-            <button type="button" class="btn btn-md">US</button>
-            <button type="button" class="btn btn-md">WORLD</button>
-            <button type="button" class="btn btn-md">POLITICS</button>
-            <button type="button" class="btn btn-md">FACT</button>
-            <button type="button" class="btn btn-md">CHECK</button>
-            <button type="button" class="btn btn-md">OPINUN</button>
-            <button type="button" class="btn btn-md">GOOGLE NEWS</button>
-            <button type="button" class="btn btn-md">CRIME</button>
-            <button type="button" class="btn btn-md">LOCAL</button>
-            <button type="button" class="btn btn-md">TECH</button>
-            <button type="button" class="btn btn-md">VIDEO</button>
-            <button type="button" class="btn btn-md">PHOTS</button>
-            <button style="float: right"type="button" class="btn btn-md">EDIT</button>
-            </div>
-                <br><br>
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>                        
+                    </button>
+                    <a class="navbar-brand navbar-left" href="#"><b>News ></b></a>
+                  </div>
+                  <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                    
+                      <li><a href="#">US</a></li>
+                      <li><a href="#">WORLD</a></li>
+                      <li><a href="#">POLITICS</a></li>
+                      <li><a href="#">FACT CHECK</a></li>
+                      <li><a href="#">OPINIUN</a></li>
+                      <li><a href="#">GOOD NEWS</a></li>
+                      <li><a href="#">CRIME</a></li>
+                      <li><a href="#">LOCAL</a></li>
+                      <li><a href="#">TECH</a></li>
+                      <li><a href="#">VIDEO</a></li>
+                      <li><a href="#">PHOTOS</a></li>
+                      <li><a href="#">MY TOPICS</a></li>
+
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                      <li><a href="#"><span></span>EDIT</a></li>
+                    </ul>
+                  </div>
+                </div>
+            </nav>
+                <br>
             <div class="desc">
               <img src="images\news1.png" alt="Trolltunga Norway" width="346" height="250"><br>
               <h4 style="padding:5px; color:rgb(128,128,128)"> LIVE UPDATES: Latest on Congressional baseball Shooting (reuters)</h4>
